--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML-And-CSS- Index</title>
+    <script src="script.js"></script>
 </head>
 <body>
     <body>
@@ -23,7 +24,7 @@
         <section id="projects">
             <h2>My Projects</h2>
             <ul>
-                <li><a href="crud operations/src/App.js">CRUD Operations</a></li>
+                <li><div id="root">CRUD Operations</div></li>
             </ul>
         </section>
         
